centjes-gen/test_resources/balance/error/as-is/BE_TRANSACTION_SUM.cent
currency USD 0.01

2023-11-24
  * assets +184467440737095516.15 USD
  * income +0.02 USD
